--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>Zsofia Keresztes</title>
+        <link href="style.css" rel="stylesheet" />
     </head>
     <body>
-        Paw Patrol 
+        <p>Paw Patrol</p>
         Chase is on the case :)
     </body>
 </html>
