--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href="style.css" rel="stylesheet" />
     </head>
     <body>
-        <p>Paw Patrol</p>
+        <p>Paw Patrol<p>
         Chase is on the case :)
     </body>
 </html>
