--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href="style.css" rel="stylesheet" />
     </head>
     <body>
-        <p>Paw Patrol<p>
-        Chase is on the case :)
+        <h1>Paw Patrol<h1>
+        <p>Chase is on the case :)</p>
     </body>
 </html>
