--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
         <link href="style.css" rel="stylesheet" />
     </head>
     <body>
-        <h1>Paw Patrol<h1>
+        <h1>Paw Patrol</h1>
         <p>Chase is on the case :)</p>
+        <p>Marshall is on fire :)</p>
+        <p>Rocky</p>
+        <p>Skye</p>
+        <p>Rubble</p>
+        <p>Zuma</p>
     </body>
 </html>
