--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Paw Patrol</h1>
-        <p>Chase is on the case :)</p>
+        <p1>Chase is on the case :)</p1>
         <p>Marshall is on fire :)</p>
         <p>Rocky</p>
         <p>Skye</p>
